# pywrkgame

./: .gitignore  ANDROID_BUILD.md  AllFromImport.md  AllFunctions.md  CMakeLists.txt  Conception.md  HowToStart.md  MANIFEST.in  PUBLISHING.md  README.md  RELEASE_CHECKLIST.md  UPLOAD_INSTRUCTIONS.md  buildozer.spec  main.py  pyproject.toml  setup.py
.github/workflows/: ci.yml  publish-pypi.yml  python-publish.yml
.kiro/specs/pywrkgame-library/: design.md  requirements.md  tasks.md
docs/: API_REFERENCE.md  GETTING_STARTED.md  PYTHON_API.md  PYTHON_BINDINGS_SUMMARY.md
examples/: README.md  platformer_example.py  puzzle_example.py  rpg_example.py  shooter_example.py  simple_game_example.py
include/pywrkgame/ai/: AIFramework.h
include/pywrkgame/animation/: AnimationSystem.h  IKSolver.h  ProceduralAnimation.h
include/pywrkgame/assets/: AssetManager.h
include/pywrkgame/audio/: AudioSystem.h
include/pywrkgame/core/: ComponentManager.h  EngineCore.h  EntityManager.h  PerformanceOptimizer.h  SystemManager.h
include/pywrkgame/memory/: MemoryManager.h
include/pywrkgame/network/: NetworkManager.h
include/pywrkgame/physics/: Box2DBackend.h  Bullet3Backend.h  PhysicsEngine.h  PhysicsMath.h
include/pywrkgame/platform/: PlatformManager.h  TouchInputManager.h
include/pywrkgame/rendering/: D3D12Device.h  GlobalIllumination.h  GraphicsDevice.h  GraphicsTypes.h  LODSystem.h  MetalDevice.h  PBRRenderer.h  ParticleSystem.h  PostProcessing.h  RenderingEngine.h  VulkanDevice.h
include/pywrkgame/tools/: DebugTools.h  PerformanceProfiler.h
include/pywrkgame/ui/: UISystem.h
python/: CMakeLists.txt  __init__.py  audio_bindings.cpp  bindings.cpp  core_bindings.cpp  physics_bindings.cpp  pywrkgame_api.py  rendering_bindings.cpp  ui_bindings.cpp
src/: CMakeLists.txt
src/ai/: AIFramework.cpp
src/animation/: AnimationSystem.cpp  IKSolver.cpp  ProceduralAnimation.cpp
src/assets/: AssetManager.cpp
src/audio/: AudioSystem.cpp
src/core/: ComponentManager.cpp  EngineCore.cpp  EntityManager.cpp  PerformanceOptimizer.cpp  SystemManager.cpp
src/memory/: MemoryManager.cpp
src/network/: NetworkManager.cpp
src/physics/: Box2DBackend.cpp  Bullet3Backend.cpp  PhysicsEngine.cpp
src/platform/: PlatformManager.cpp  TouchInputManager.cpp
src/rendering/: D3D12Device.cpp  GlobalIllumination.cpp  GraphicsDevice.cpp  LODSystem.cpp  MetalDevice.cpp  PBRRenderer.cpp  ParticleSystem.cpp  PostProcessing.cpp  RenderingEngine.cpp  VulkanDevice.cpp
src/tools/: DebugTools.cpp  PerformanceProfiler.cpp
src/ui/: UISystem.cpp
tests/: CMakeLists.txt  test_buildozer_config.py
tests/cpp/: test_adaptive_music_properties.cpp  test_advanced_ai_properties.cpp  test_advanced_network_properties.cpp  test_advanced_physics_properties.cpp  test_ai_foundation_properties.cpp  test_audio_effects_properties.cpp  test_audio_system.cpp  test_audio_system_properties.cpp  test_debug_tools_properties.cpp  test_ecs_framework.cpp  test_engine_core.cpp  test_global_illumination_properties.cpp  test_graphics_device_properties.cpp  test_ik_solver_properties.cpp  test_lod_system_properties.cpp  test_mobile_features_properties.cpp  test_network_properties.cpp  test_particle_system_properties.cpp  test_pbr_rendering_properties.cpp  test_performance_optimization_properties.cpp  test_physics_engine.cpp  test_physics_engine_properties.cpp  test_platform_manager.cpp  test_post_processing_properties.cpp  test_procedural_animation_properties.cpp  test_profiler_properties.cpp  test_rendering_engine.cpp  test_skeletal_animation_properties.cpp  test_touch_input_manager.cpp  test_ui_system_properties.cpp
tests/python/: conftest.py.in  test_cross_platform_compilation.py  test_ecs_framework_properties.py  test_high_level_api.py  test_integration_comprehensive.py  test_python_bindings.py  test_touch_input_properties.py
