[build-system]
requires = ["setuptools>=45", "wheel", "pybind11>=2.6.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pywrkgame"
version = "3.0.0"
description = "High-performance game engine with Python bindings for 2D/3D games"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "WorkerAI", email = "workerai@mail.ru"}
]
keywords = ["game", "engine", "gamedev", "2d", "3d", "graphics", "physics", "audio", "mobile", "cross-platform"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Games/Entertainment",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: C++",
    "Operating System :: OS Independent",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
]
dependencies = [
    "pybind11>=2.6.0",
]

[project.optional-dependencies]
test = ["pytest>=6.0", "hypothesis>=6.0"]
dev = ["pytest>=6.0", "hypothesis>=6.0", "cmake>=3.16"]

[project.urls]
Homepage = "https://github.com/your-org/pywrkgame"
Documentation = "https://github.com/your-org/pywrkgame/tree/main/docs"
Repository = "https://github.com/your-org/pywrkgame"
"Bug Tracker" = "https://github.com/your-org/pywrkgame/issues"

[tool.pytest.ini_options]
testpaths = ["tests/python"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.hypothesis]
max_examples = 100
deadline = 10000
